--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "selenium"
   ],
   "author": "Julie Ralph <ju.ralph@gmail.com>",
-  "dependencies": {
+  "peerDependencies": {
     "selenium-webdriver": "2.40.0"
   },
   "repository": {
@@ -21,5 +21,5 @@
     "test": "example_test.js"
   },
   "license": "MIT",
-  "version": "0.1.0"
+  "version": "0.1.1"
 }
